--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,29 +2,32 @@
 import Websitelogo from "../assets/icon/logovault.svg";
 ---
 
-<footer class="pt-12 bg-background">
-    <div class=" grid grid-cols-1 md:grid-cols-3 md:grid-rows-3 text-lg font-principal font-light text-white md:px-50 gap-4 mx-5">
+<footer class="px-5 md:px-16 pt-5 md:pt-30 bg-background">
+    <div class="flex justify-start md:justify-center">
+        <div
+        class="grid grid-cols-1 md:grid-cols-3 md:grid-rows-3 text-lg font-principal font-light text-primary gap-4 "
+    >
         <div class="order-1 flex flex-col space-y-4">
-            <div class="flex justify-left font-medium text-2xl">Contact</div>
+            <div class="flex justify-start font-medium text-2xl">Contact</div>
             <div>
                 <ul class="list-none">
-                    <li class="text-white hover:text-gray-300">
+                    <li class="text-primary hover:text-gray-300">
                         Work inquires: work@vaultflow.com
                     </li>
-                    <li class="text-white hover:text-gray-300">
+                    <li class="text-primary hover:text-gray-300">
                         Work inquires: work@vaultflow.com
                     </li>
-                    <li class="text-white hover:text-gray-300">
+                    <li class="text-primary hover:text-gray-300">
                         New business: newbusiness@vaultflow.com
                     </li>
                 </ul>
             </div>
         </div>
         <div class="order-4 lg:order-2 flex flex-col space-y-4 lg:order">
-            <div class="flex justify-left font-medium text-2xl">Address</div>
-            <div >
+            <div class="flex justify-start font-medium text-2xl">Address</div>
+            <div>
                 <ul class="list-none">
-                    <li class="text-white hover:text-gray-300">
+                    <li class="text-primary hover:text-gray-300">
                         398 11th Street, Floor 2<br />
                         San Francisco, CA 94103
                     </li>
@@ -34,26 +37,26 @@ import Websitelogo from "../assets/icon/logovault.svg";
         <div class="order-3"></div>
 
         <div class="order-2 lg:order-4 flex flex-col justify-center gap-2">
-            <div class="flex justify-left font-medium text-2xl">Careers</div>
-            <div class="text-white hover:text-gray-300">
+            <div class="flex justify-start font-medium text-2xl">Careers</div>
+            <div class="text-primary hover:text-gray-300">
                 Careers@vaultflow.com
             </div>
             <div></div>
         </div>
         <div class="order-5 flex flex-col space-y-4">
-            <div class="flex justify-left font-medium text-2xl">Social</div>
+            <div class="flex justify-start font-medium text-2xl">Social</div>
             <div>
                 <ul class="list-none">
-                    <li class="text-white hover:text-gray-300">Twitter</li>
-                    <li class="text-white hover:text-gray-300">Instagram</li>
-                    <li class="text-white hover:text-gray-300">Tik Tok</li>
+                    <li class="text-primary hover:text-gray-300">Twitter</li>
+                    <li class="text-primary hover:text-gray-300">Instagram</li>
+                    <li class="text-primary hover:text-gray-300">Tik Tok</li>
                 </ul>
             </div>
         </div>
         <div class="order-6"></div>
         <div class="order-9 lg:order-7 flex flex-col space-y-4">
             <div
-                class="flex font-light text-base text-[#939393] justify-center"
+                class="flex font-light text-base text-[#939393] justify-center md:justify-start"
             >
                 © 2023 Vaultflow. All Rights Reserved.
             </div>
@@ -62,5 +65,6 @@ import Websitelogo from "../assets/icon/logovault.svg";
         <div class="order-7 lg:order-9 flex justify-center lg:justify-end">
             <Websitelogo class="w-40 mr-3" />
         </div>
+    </div>
     </div>
 </footer>
