--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ import IconTokens from "../assets/icon/Logotokens.svg";
                     </button>
 				</div>
 				<div
-					class="inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_0_10px_rgba(187,155,255,0.5)] rounded-2xl mx-6 md:mx-20"
+					class="inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)] rounded-2xl mx-6 md:mx-20"
 				>
 					<Image
 						src={imageDashboard}
@@ -125,7 +125,7 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 
 			<div class="grid grid-cols-1 md:grid-cols-2 gap-6 space-y-6 mx-5 max-w-7xl">
 				<div
-					class="noisecard relative flex flex-col items-left space-y-6 p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_0_10px_rgba(187,155,255,0.5)]"
+					class="noisecard relative flex flex-col items-left space-y-6 p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
 				>
 					<Image src={IconAnalytics} alt="analytics" class="mt-10 shadow-[#591DDDBF] rounded-lg shadow-[0_0_20px_rgba(187,155,255,0.5)]" />
 					<div class="text-2xl font-principal font-medium">
@@ -141,7 +141,7 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 					<div class="text-base">View dashboard</div>
 				</div>
 				<div
-					class="noisecard relative flex flex-col items-left space-y-6 p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-x shadow-[0_0_10px_rgba(187,155,255,0.5)]"
+					class="noisecard relative flex flex-col items-left space-y-6 p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-x shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
 				>
 					<Image src={IconTokens} alt="analytics" class="mx mt-10 shadow-[#9525C9BF] rounded-lg shadow-[0_0_20px_rgba(187,155,255,0.5)]" />
 					<div class="text-2xl font-principal font-medium">
@@ -174,13 +174,13 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 						<Image
 							src={Digitaltoken}
 							alt="analytics"
-							class="mt-10 inset-shadow-primary/20 inset-shadow-xs shadow-secondary/70 rounded-2xl shadow-[0_0_10px_rgba(187,155,255,0.5)]"
+							class="mt-10 inset-shadow-primary/20 inset-shadow-xs shadow-secondary/70 rounded-2xl shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
 						/>
 					</div>
 				</div>
 
 				<div
-					class="noisecard relative col-span-full space-y-6 md:p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_0_10px_rgba(187,155,255,0.5)]"
+					class="noisecard relative col-span-full space-y-6 md:p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
 				>
 					<div
 						class="flex flex-col items-center rounded-2xl font-principal md:px-12"
