readapting the footer

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,10 +4,10 @@ import OpenMenu from "../assets/icon/menuopen.svg";
 import CloseMenu from "../assets/icon/menuclose.svg";
 ---
 
-<header id="p" class="bg-[#0B0121] px-6 py-4 md:h-18">
+<header id="p" class="bg-[#0B0121] px-6 py-4 lg:h-18">
     <nav
         id="home"
-        class="container flex justify-between items-center md:items-start md:justify-center mx-auto min-w-sm md:max-w-7xl"
+        class="container flex justify-between items-center lg:items-start lg:justify-center mx-auto min-w-sm md:max-w-7xl"
         x-data="{ showMobileMenu: false }"
     >
         <div class="flex items-start justify-between w-full">
