--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,10 +2,10 @@
 import Websitelogo from "../assets/icon/logovault.svg";
 ---
 
-<footer class="px-5 md:px-1 pt-5 md:pt-30 bg-background">
-    <div class="flex justify-start md:justify-center ">
+<footer class="px-5 lg:px-1 pt-5 lg:pt-30 bg-background">
+    <div class="flex justify-start lg:justify-center">
         <div
-        class="grid grid-cols-1 md:grid-cols-3 md:grid-rows-3 text-lg font-principal font-light text-primary gap-4 "
+        class="grid grid-cols-1 lg:grid-cols-3 lg:grid-rows-3 text-lg font-principal font-light text-primary gap-4 w-full"
     >
         <div class="order-1 flex flex-col space-y-4">
             <div class="flex justify-start font-medium text-2xl">Contact</div>
@@ -54,14 +54,14 @@ import Websitelogo from "../assets/icon/logovault.svg";
             </div>
         </div>
         <div class="order-6"></div>
-        <div class="order-9 lg:order-7 flex flex-col space-y-4">
+        <div class="order-9 lg:order-8 flex flex-col space-y-4">
             <div
-                class="flex font-light text-base text-[#939393] justify-center md:justify-start"
+                class="flex font-light text-base text-[#939393] justify-center lg:justify-start"
             >
                 © 2023 Vaultflow. All Rights Reserved.
             </div>
         </div>
-        <div class="order-8"></div>
+        <div class="order-9 lg:order-8"></div>
         <div class="order-7 lg:order-9 flex justify-center lg:justify-end">
             <Websitelogo class="w-40 mr-3" />
         </div>
