--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,9 +3,9 @@ import Websitelogo from "../assets/icon/logovault.svg";
 ---
 
 <footer class="px-5 lg:px-1 pt-5 lg:pt-30 bg-background">
-    <div class="flex justify-start lg:justify-center">
+    <div class="flex justify-start lg:justify-center ">
         <div
-        class="grid grid-cols-1 lg:grid-cols-3 lg:grid-rows-3 text-lg font-principal font-light text-primary gap-4 w-full"
+        class="grid grid-cols-1 lg:grid-cols-3 lg:grid-rows-3 text-lg font-principal font-light text-primary gap-4 w-full lg:w-6xl"
     >
         <div class="order-1 flex flex-col space-y-4">
             <div class="flex justify-start font-medium text-2xl">Contact</div>
