--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,7 +125,7 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 
 			<div class="grid grid-cols-1 md:grid-cols-2 gap-6 space-y-6 mx-5 max-w-7xl">
 				<div
-					class="noisecard relative flex flex-col items-left space-y-6 p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
+					class="noisecard relative flex flex-col items-left space-y-6 p-10 rounded-xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
 				>
 					<Image src={IconAnalytics} alt="analytics" class="mt-10 shadow-[#591DDDBF] rounded-lg shadow-[0_0_20px_rgba(187,155,255,0.5)]" />
 					<div class="text-2xl font-principal font-medium">
