--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,16 +9,16 @@ body {
 .noisecard::before {
     content: "";
     background-color: transparent;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 600 600'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.5' numOctaves='2' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)'/%3E%3C/svg%3E");
+    background-image: url('../assets/images/noise.svg');
     background-repeat: repeat;
-    background-size: 180px;
+    background-size: 120px;
     opacity: .2;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 4%;
-    border-radius: 12px;
+    height: 5%;
+    border-radius: 0 0 1rem 1rem;
     z-index: 0;
 }
 
