Mobile version button hidden

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 <Layout>
 	<section id="hero" >
 		<div
-			class="bg-[url('../assets/images/herostack.webp')] font-principal  bg-cover bg-top h-full flex justify-center pt-20 md:pt-42.5 pb-5 md:pb-20"
+			class="bg-[url('../assets/images/herostack.webp')] font-principal  bg-cover bg-top h-full flex justify-center  pt-20 md:pt-42.5 pb-5 md:pb-20"
 		>
 			<div
 				class="flex flex-col items-center text-primary text-center md:max-w-5xl gap-y-10"
@@ -44,7 +44,7 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 						Suspendisse varius enim in eros elementum tristique.
 					</div>
 				</div>
-				<div class="flex justify-center space-x-4">
+				<div class="flex justify-center space-x-4 ">
 					<button
                         id="button-download"
                         class="flex items-center justify-center text-background bg-primary px-3 py-6 rounded-full w-48 h-12 transition hover:bg-secondary"
@@ -53,7 +53,7 @@ import IconTokens from "../assets/icon/Logotokens.svg";
                     </button>
                     <button
                         id="button-expert"
-                        class="flex items-center justify-center text-primary border-primary px-5 py-2 w-46 h-12 border rounded-full transition hover:bg-secondary"
+                        class="hidden md:flex items-center justify-center text-primary border-primary px-5 py-2 w-46 h-12 border rounded-full transition hover:bg-secondary"
                     >
                         Talk to an expert
                     </button>
