increase opacity of noise and

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -10,6 +10,8 @@ import CloseMenu from "../assets/icon/menuclose.svg";
         class="container flex justify-between items-center lg:items-start lg:justify-center mx-auto w-full md:max-w-7xl"
         x-data="{ showMobileMenu: false }"
     >
+
+        <!-- Large screen navigation bar -->
         <div class="flex items-start justify-between w-full">
             <a href="#" class="text-lg font-bold">
                 <Websitelogo class="inline-block w-34 h-6" />
@@ -57,6 +59,9 @@ import CloseMenu from "../assets/icon/menuclose.svg";
                 </li>
             </ul>
         </div>
+
+        <!-- Mobile navigation bar -->
+
         <div
             class="flex flex-row items-center gap-8 font-principal font-normal h-20"
         >
@@ -74,8 +79,10 @@ import CloseMenu from "../assets/icon/menuclose.svg";
                 </div>
             </button>
         </div>
+
+        <!-- Menu panel -->
         <div
-            class="bg-background text-primary fixed top-0 left-0 w-full h-full lg:hidden"
+            class="bg-background text-primary fixed top-0 left-0 w-full h-full z-10 lg:hidden"
             x-show="showMobileMenu"
             @click.away="showMobileMenu = false"
             x-transition:enter="transition ease-out duration-300"
@@ -85,7 +92,8 @@ import CloseMenu from "../assets/icon/menuclose.svg";
             x-transition:leave-start="opacity-100 transform translate-x-0"
             x-transition:leave-end="opacity-100 transform translate-x-full"
         >
-            <div class="flex flex-col w-full max-w-sm mx-auto py-10 gap-6">
+
+            <div class="flex flex-col w-screen max-w-sm mx-auto px-5 py-8 gap-6">
                 <div class="flex justify-between items-center">
                     <a href="#" class="text-lg font-bold">
                         <Websitelogo class="inline-block w-34 h-6" />
