--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -2,11 +2,12 @@
 import Websitelogo from "../assets/icon/logovault.svg";
 ---
 
-<footer class="px-5 lg:px-1 pt-5 lg:pt-30 bg-background">
-    <div class="flex justify-start lg:justify-center ">
+<footer class="px-5 lg:px-1 pt-5 lg:pt-30 bg-background font-principal">
+    <div class="flex flex-col justify-center items  w-full lg:w-6xl mx-auto">
         <div
-        class="grid grid-cols-1 lg:grid-cols-3 lg:grid-rows-3 text-lg font-principal font-light text-primary gap-4 w-full lg:w-6xl"
+        class="grid grid-cols-1 lg:grid-cols-3 lg:grid-rows-2 text-lg font-principal font-light text-primary gap-4"
     >
+    <!-- Contact  -->
         <div class="order-1 flex flex-col space-y-4">
             <div class="flex justify-start font-medium text-2xl">Contact</div>
             <div>
@@ -23,6 +24,8 @@ import Websitelogo from "../assets/icon/logovault.svg";
                 </ul>
             </div>
         </div>
+
+    <!-- Address -->
         <div class="order-4 lg:order-2 flex flex-col space-y-4 lg:order">
             <div class="flex justify-start font-medium text-2xl">Address</div>
             <div>
@@ -36,6 +39,7 @@ import Websitelogo from "../assets/icon/logovault.svg";
         </div>
         <div class="order-3"></div>
 
+    <!-- Careers -->
         <div class="order-2 lg:order-4 flex flex-col justify-center gap-2">
             <div class="flex justify-start font-medium text-2xl">Careers</div>
             <div class="text-primary hover:text-gray-300">
@@ -43,6 +47,8 @@ import Websitelogo from "../assets/icon/logovault.svg";
             </div>
             <div></div>
         </div>
+
+    <!-- Social media -->
         <div class="order-5 flex flex-col space-y-4">
             <div class="flex justify-start font-medium text-2xl">Social</div>
             <div>
@@ -53,18 +59,30 @@ import Websitelogo from "../assets/icon/logovault.svg";
                 </ul>
             </div>
         </div>
+
         <div class="order-6"></div>
+
+    
+    </div>
+
+    <!-- Copyright -->
+     <div class="flex flex-col md:flex-row md:justify-center lg:justify-between pb-10">
         <div class="order-9 lg:order-8 flex flex-col space-y-4">
             <div
-                class="flex font-light text-base text-[#939393] justify-center lg:justify-start"
+                class="flex font-light text-base text-[#939393] justify-center text-center lg:justify-start py-2"
             >
                 © 2023 Vaultflow. All Rights Reserved.
             </div>
         </div>
+
         <div class="order-9 lg:order-8"></div>
+
+    <!-- Logo -->
         <div class="order-7 lg:order-9 flex justify-center lg:justify-end">
             <Websitelogo class="w-40 mr-3" />
         </div>
     </div>
-    </div>
+     </div>
+
+
 </footer>
