--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,8 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 ---
 
 <Layout>
+
+	<!-- Hero section -->
 	<section id="hero" >
 		<div
 			class="bg-[url('../assets/images/herostack.webp')] font-principal  bg-cover bg-top h-full flex justify-center  pt-20 md:pt-42.5 pb-5 md:pb-20"
@@ -25,6 +27,9 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 			<div
 				class="flex flex-col items-center text-primary text-center md:max-w-5xl gap-y-10"
 			>
+
+
+			<!-- Introduction -->
 				<div class="flex flex-col items-center gap-y-6">
 					<div
 						class="font-light border border-primary/30 rounded-full text-xs md:text-lg px-4 md:w-110 py-2 md:px-5 md:py-5"
@@ -44,6 +49,8 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 						Suspendisse varius enim in eros elementum tristique.
 					</div>
 				</div>
+
+				<!-- Button part -->
 				<div class="flex justify-center space-x-4 ">
 					<button
                         id="button-download"
@@ -58,6 +65,8 @@ import IconTokens from "../assets/icon/Logotokens.svg";
                         Talk to an expert
                     </button>
 				</div>
+
+				<!-- Dashboard  -->
 				<div
 					class="inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)] rounded-2xl mx-6 md:mx-20"
 				>
@@ -70,7 +79,11 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 			</div>
 		</div>
 	</section>
+
+	<!-- Trust section -->
 	<section id="trust font-principal">
+
+		<!-- Trust section Introduction -->
 		<div class="bg-background bg-cover bg-top h-full py-10 gap-3">
 			<div
 				class="flex justify-center text-center text-white/80 font-principal font-light text-sm md:text-lg"
@@ -78,6 +91,8 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 				Trusted by teams at over 1,000 of the world’s leading
 				organizations
 			</div>
+
+			<!-- Logos -->
 			<div class=" flex flex-wrap justify-center items-center gap-6 pt-10 px-10">
 				<Image src={Dell} alt="dell" class="order-1 object-cover rounded-lg w-18 md:w-16" />
 				<Image
@@ -105,10 +120,14 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 			</div>
 		</div>
 	</section>
+
+	<!-- Features section -->
 	<section id="features" class="font-principal ">
 		<div
 			class="bg-background text-primary mx-auto flex flex-col justify-center items-center pb-10"
 		>
+
+		<!-- Features Introduction -->
 			<div class=" bg-[url('../assets/images/featurebg.webp')] bg-[length:0px_0px] md:bg-[length:470px_324px] bg-no-repeat bg-center text-center pb-6">
 				<div
 					class=" flex justify-center text-3xl md:text-5xl font-medium text-primary pt-10"
@@ -123,7 +142,10 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 				</div>
 			</div>
 
+			<!-- Features cards -->
 			<div class="grid grid-cols-1 md:grid-cols-2 gap-6 space-y-6 mx-5 max-w-7xl">
+				
+				<!-- Analytics card -->
 				<div
 					class="noisecard relative flex flex-col items-left space-y-6 p-10 rounded-xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
 				>
@@ -138,8 +160,10 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 						dashboard offers everything you need to gain valuable
 						insights.
 					</div>
-					<div class="text-base">View dashboard</div>
+					<div class="text-base underline">View dashboard</div>
 				</div>
+
+				<!-- Digital Credit Tokens card -->
 				<div
 					class="noisecard relative flex flex-col items-left space-y-6 p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-x shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
 				>
@@ -154,11 +178,14 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 						and scalable way to drive customer loyalty and encourage
 						repeat business.
 					</div>
-					<div class="text-base">View tokens</div>
+					<div class="text-base underline">View tokens</div>
 				</div>
+
+				<!-- Code collaboration card -->
 				<div
 					class="grid grid-cols-1 lg:grid-cols-2 gap-6 noisecard relative col-span-full p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_0_10px_rgba(187,155,255,0.5)]"
 				>
+					<!-- First part code collaboration -->
 					<div class="col-span-1 flex flex-col space-y-6 rounded-2xl">
 						<Image src={IconCode} alt="analytics" class="mt-10 shadow-[#C925ABBF] rounded-lg shadow-[0_0_20px_rgba(187,155,255,0.5)]" />
 						<div class="text-2xl font-principal font-medium">
@@ -167,9 +194,10 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 						<div class="w-4/5 text-sm">
 							Our advanced code synchronization technology ensures that your data is always up-to-date and accurate, no matter where it's coming from. Whether you're integrating data from multiple sources or working with a team of developers, our synchronization technology makes it easy to collaborate and ensure that your data is consistent and reliable.
 						</div>
-						<div class="text-base">View code collaboration</div>
+						<div class="text-base underline">View code collaboration</div>
 					</div>
 
+					<!-- Second part code collaboration -->
 					<div class="col-span-1 flex justify-center items-center">
 						<Image
 							src={Digitaltoken}
@@ -178,7 +206,8 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 						/>
 					</div>
 				</div>
-
+				
+				<!-- Analytics card -->
 				<div
 					class="noisecard relative col-span-full space-y-6 md:p-10 rounded-2xl bg-gradient-to-b from-primary/5 to-transparent inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)]"
 				>
