--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -66,7 +66,7 @@ import Websitelogo from "../assets/icon/logovault.svg";
     </div>
 
     <!-- Copyright -->
-     <div class="flex flex-col md:flex-row md:justify-center lg:justify-between pb-10">
+     <div class="flex flex-col lg:flex-row lg:justify-between pb-10">
         <div class="order-9 lg:order-8 flex flex-col space-y-4">
             <div
                 class="flex font-light text-base text-[#939393] justify-center text-center lg:justify-start py-2"
