--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,14 +25,14 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 			class="bg-[url('../assets/images/herostack.webp')] font-principal  bg-cover bg-top h-full flex justify-center  pt-20 md:pt-42.5 pb-5 md:pb-20"
 		>
 			<div
-				class="flex flex-col items-center text-primary text-center md:max-w-5xl gap-y-10"
+				class="flex flex-col items-center text-primary text-center w-screen md:max-w-5xl gap-y-10"
 			>
 
 
 			<!-- Introduction -->
 				<div class="flex flex-col items-center gap-y-6">
 					<div
-						class="font-light border border-primary/30 rounded-full text-xs md:text-lg px-4 md:w-110 py-2 md:px-5 md:py-5"
+						class="font-light border border-primary/30 rounded-full text-xs md:text-lg px-3 md:w-110 py-2 md:px-5 md:py-2"
 					>
 						We just raised $20M in Series B. Learn more
 					</div>
@@ -51,13 +51,13 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 				</div>
 
 				<!-- Button part -->
-				<div class="flex justify-center space-x-4 ">
+				<div class="w-full flex justify-center gap-x-">
 					<button
-                        id="button-download"
-                        class="flex items-center justify-center text-background bg-primary px-3 py-6 rounded-full w-48 h-12 transition hover:bg-secondary"
-                    >
-                        Download the app
-                    </button>
+						id="button-download"
+						class="w-full md:w-auto lg:w- mx-5 flex items-center justify-center bg-primary text-background rounded-full transition hover:bg-secondary py-3 lg:py-6 md:px-6 lg:h-12"
+					>
+						Download the app
+					</button>
                     <button
                         id="button-expert"
                         class="hidden md:flex items-center justify-center text-primary border-primary px-5 py-2 w-46 h-12 border rounded-full transition hover:bg-secondary"
@@ -68,7 +68,7 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 
 				<!-- Dashboard  -->
 				<div
-					class="inset-shadow-white/50 inset-shadow-xs shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)] rounded-2xl mx-6 md:mx-20"
+					class="inset-shadow-white/50 inset-shadow-xs md:inset-shadow-xl shadow-secondary/70 shadow-[0_-1px_10px_rgba(187,155,255,0.5)] rounded-lg md:rounded-2xl mx-6 md:mx-20"
 				>
 					<Image
 						src={imageDashboard}
