Hero first button corrected

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,11 +31,10 @@ import IconTokens from "../assets/icon/Logotokens.svg";
 
 			<!-- Introduction -->
 				<div class="flex flex-col items-center gap-y-6">
-					<div
-						class="font-light border border-primary/30 rounded-full text-xs md:text-lg px-3 md:w-110 py-2 md:px-5 md:py-2"
+					<button class="font-light border border-primary/30 rounded-full text-xs md:text-lg px-3 md:w-110 py-2 md:px-5 md:py-2 hover:bg-secondary transition"
 					>
 						We just raised $20M in Series B. Learn more
-					</div>
+					</button>
 					<div
 						class="flex justify-center font-medium text-4xl md:text-6xl bg-gradient-to-br from-primary to-primary/50 text-transparent bg-clip-text"
 					>
