--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,31 +55,6 @@ body {
         '3xl': 1.875rem;
         '4xl': 2.25rem;
         '5xl': 3rem;
-    }
-
-    ;
-
-    --shadows-x: 0 0 5px 0 rgba(187, 155, 255, 0.5);
-
-    --custom-utilities: {
-        '.card-noise': {
-            position: relative; // Le conteneur doit être relatif pour que le pseudo-élément soit bien positionné
-        }
-
-        ,
-        '.card-noise::before': {
-            content: '""';
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 600 600'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)'/%3E%3C/svg%3E");
-            background-repeat: repeat;
-            background-size: 11.375rem; // Converti de 182px (182 / 16 = 11.375)
-            opacity: 0.12;
-            position: absolute;
-            inset: 0; // Remplace top: 0; left: 0; width: 100%; height: 100%;
-        }
-
-        ,
-    }
-
-    ;
+    };
 
 }
